[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scripts/Button2.gd" type="Script" id=1]
[ext_resource path="res://button.png" type="Texture" id=3]

[node name="Button2" type="Control"]
margin_right = 65.0
margin_bottom = 65.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
value = 60.0
texture_progress = ExtResource( 3 )
tint_under = Color( 0.266667, 0.298039, 0.372549, 1 )
tint_progress = Color( 0.333333, 0.364706, 0.435294, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Button2_gui_input"]
[connection signal="item_rect_changed" from="." to="." method="_on_Button2_item_rect_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
